--- a/NAP/Code/Lab_4/ClientB/ClientB.vcxproj
+++ b/NAP/Code/Lab_4/ClientB/ClientB.vcxproj
@@ -21,8 +21,8 @@
   <PropertyGroup Label="Globals">
     <VCProjectVersion>17.0</VCProjectVersion>
     <Keyword>Win32Proj</Keyword>
-    <ProjectGuid>{85b56ae7-2d86-4802-bfbd-96f624ce131c}</ProjectGuid>
-    <RootNamespace>ServerB</RootNamespace>
+    <ProjectGuid>{18bec6cd-a486-4dd6-8d8e-5d2109e9dc9f}</ProjectGuid>
+    <RootNamespace>ClientB</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
@@ -123,8 +123,8 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="ClientB.cpp" />
     <ClCompile Include="ErrorHandler.cpp" />
-    <ClCompile Include="Server.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="ErrorHandler.h" />
