--- a/NAP/Code/Lab_4/ClientB/ClientB.vcxproj.filters
+++ b/NAP/Code/Lab_4/ClientB/ClientB.vcxproj.filters
@@ -15,7 +15,7 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="Server.cpp">
+    <ClCompile Include="ClientB.cpp">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
     <ClCompile Include="ErrorHandler.cpp">
