--- a/IPT/Code/Lab_1/ASPA/ASPA_0010_1/ASPA_0010_1.csproj
+++ b/IPT/Code/Lab_1/ASPA/ASPA_0010_1/ASPA_0010_1.csproj
@@ -6,4 +6,8 @@
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="BSTU.Results.Collection" Version="1.0.1" />
+  </ItemGroup>
+
 </Project>
