SP:lab1 fixes added, lab 2 started

--- a/SP/Code/Lab_1/Lab1/OS_10_02/OS_10_02.vcxproj
+++ b/SP/Code/Lab_1/Lab1/OS_10_02/OS_10_02.vcxproj
@@ -102,12 +102,12 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
-      <AdditionalIncludeDirectories>C:\Users\Manmade\Desktop\5sem\SP\Code\Lab 1\Lab1\OS10_HTAPI;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>C:\Users\Manmade\Desktop\5sem\SP\Code\Lab_1\Lab1\OS10_HTAPI;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalLibraryDirectories>C:\Users\Manmade\Desktop\5sem\SP\Code\Lab 1\Lab1\x64\Debug;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalLibraryDirectories>C:\Users\Manmade\Desktop\5sem\SP\Code\Lab_1\Lab1\x64\Debug;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
       <AdditionalDependencies>OS10_HTAPI.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
