SP:lab 2 dll in dev. DLL header file in progress

--- a/SP/Code/Lab_2/OS11_HTAPI/OS11_HTAPI.vcxproj
+++ b/SP/Code/Lab_2/OS11_HTAPI/OS11_HTAPI.vcxproj
@@ -136,10 +136,13 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="framework.h" />
+    <ClInclude Include="OS10_1.h" />
+    <ClInclude Include="OS_11DLL.h" />
     <ClInclude Include="pch.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="dllmain.cpp" />
+    <ClCompile Include="OS11_HTAPI.cpp" />
     <ClCompile Include="pch.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
