--- a/IPT/Code/Lab_1/ASPA/ASPA_0010_1/ASPA_0010_1.csproj
+++ b/IPT/Code/Lab_1/ASPA/ASPA_0010_1/ASPA_0010_1.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="BSTU.Results.Authenticate" Version="1.0.2" />
     <PackageReference Include="BSTU.Results.Collection" Version="1.0.4" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="9.0.6" />
   </ItemGroup>
