--- a/IPT/Code/Lab_1/ASPA/ResultsAuthenticate/ResultsAuthenticate.csproj
+++ b/IPT/Code/Lab_1/ASPA/ResultsAuthenticate/ResultsAuthenticate.csproj
@@ -1,15 +1,19 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
-  <PropertyGroup>
-    <TargetFramework>net8.0</TargetFramework>
-    <ImplicitUsings>enable</ImplicitUsings>
-    <Nullable>enable</Nullable>
-  </PropertyGroup>
+	<PropertyGroup>
+		<TargetFramework>net8.0</TargetFramework>
+		<GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+		<PackageId>BSTU.Results.Authenticate</PackageId>
+		<Version>1.0.2</Version>
+		<Authors>Manmad</Authors>
+		<Description>A library for Cookie authentification.</Description>
+	</PropertyGroup>
 
-  <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore.Http.Abstractions" Version="2.3.0" />
-    <PackageReference Include="Microsoft.Extensions.Identity.Core" Version="9.0.9" />
-    <PackageReference Include="Microsoft.Extensions.Identity.Stores" Version="9.0.9" />
-  </ItemGroup>
+	<ItemGroup>
+		<PackageReference Include="Microsoft.AspNetCore.Identity" Version="2.3.1" />
+		<PackageReference Include="Microsoft.AspNetCore.Mvc.Core" Version="2.3.0" />
+		<PackageReference Include="Microsoft.Extensions.Identity.Core" Version="9.0.10" />
+		<PackageReference Include="Microsoft.Extensions.Identity.Stores" Version="9.0.10" />
+	</ItemGroup>
 
 </Project>
