--- a/IPT/Code/Lab_1/ASPA/ASPA_0010_1/ASPA_0010_1.csproj
+++ b/IPT/Code/Lab_1/ASPA/ASPA_0010_1/ASPA_0010_1.csproj
@@ -9,6 +9,10 @@
   <ItemGroup>
     <PackageReference Include="BSTU.Results.Authenticate" Version="1.0.2" />
     <PackageReference Include="BSTU.Results.Collection" Version="1.0.4" />
+    <PackageReference Include="Microsoft.AspNet.Identity.EntityFramework" Version="2.2.4" />
+    <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="8.0.21" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.10" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="9.0.10" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="9.0.6" />
   </ItemGroup>
 
