--- a/NAP/Code/Lab_5/ServerB/ServerB.vcxproj
+++ b/NAP/Code/Lab_5/ServerB/ServerB.vcxproj
@@ -21,8 +21,8 @@
   <PropertyGroup Label="Globals">
     <VCProjectVersion>17.0</VCProjectVersion>
     <Keyword>Win32Proj</Keyword>
-    <ProjectGuid>{335c5258-e0ea-4260-80b5-a8b8d0199b8a}</ProjectGuid>
-    <RootNamespace>ServerN</RootNamespace>
+    <ProjectGuid>{bc7db499-1df6-4459-a9f4-de7c9c766fe5}</ProjectGuid>
+    <RootNamespace>ServerB</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
@@ -102,10 +102,13 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
+      <AdditionalIncludeDirectories>C:\Users\Manmade\Desktop\5sem\NAP\Code\Lab_5\ErrorHandlerLib;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
+      <AdditionalLibraryDirectories>C:\Users\Manmade\Desktop\5sem\NAP\Code\Lab_5\x64\Debug;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalDependencies>ErrorHandlerLib.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
@@ -123,11 +126,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="ErrorHandler.cpp" />
-    <ClCompile Include="ServerN.cpp" />
-  </ItemGroup>
-  <ItemGroup>
-    <ClInclude Include="ErrorHandler.h" />
+    <ClCompile Include="ServerB.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
