IPT:lab2 in progress. channelsController rework in progress

--- a/IPT/Code/Lab_2/ASPA/ASPA_0011_API/appsettings.json
+++ b/IPT/Code/Lab_2/ASPA/ASPA_0011_API/appsettings.json
@@ -1,9 +1,12 @@
 {
   "Logging": {
     "LogLevel": {
-      "Default": "Information",
+      "Default": "Trace",
+      "Microsoft": "Error",
+      "Microsofr.Hosting.Lifetime": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "WaitEnqueue": 5
 }
