--- a/IPT/Code/Lab_2/ASPA/ASPA_0011_API/appsettings.json
+++ b/IPT/Code/Lab_2/ASPA/ASPA_0011_API/appsettings.json
@@ -1,12 +1,10 @@
 {
+  "WaitEnqueue": 30,
   "Logging": {
     "LogLevel": {
-      "Default": "Trace",
-      "Microsoft": "Error",
-      "Microsofr.Hosting.Lifetime": "Information",
+      "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*",
-  "WaitEnqueue": 5
+  "AllowedHosts": "*"
 }
