--- a/SP/Code/Lab_3/OS12_LIB/OS12_LIB.vcxproj.filters
+++ b/SP/Code/Lab_3/OS12_LIB/OS12_LIB.vcxproj.filters
@@ -21,35 +21,16 @@
     <ClInclude Include="pch.h">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
-    <ClInclude Include="OS12.h">
-      <Filter>Файлы заголовков</Filter>
-    </ClInclude>
-    <ClInclude Include="MathFactory.h">
+    <ClInclude Include="OS12_Lib.h">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="dllmain.cpp">
+    <ClCompile Include="OS12_LIB.cpp">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
     <ClCompile Include="pch.cpp">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
-    <ClCompile Include="OS12.cpp">
-      <Filter>Исходные файлы</Filter>
-    </ClCompile>
-    <ClCompile Include="MathFactory.cpp">
-      <Filter>Исходные файлы</Filter>
-    </ClCompile>
-  </ItemGroup>
-  <ItemGroup>
-    <Midl Include="IMathInterface.idl">
-      <Filter>Исходные файлы</Filter>
-    </Midl>
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="OS12_COM.def">
-      <Filter>Исходные файлы</Filter>
-    </None>
   </ItemGroup>
 </Project>
