SP:lab4 in progress

--- a/SP/Code/Lab_4/OS13_HTCOM/OS13_HTCOM.vcxproj
+++ b/SP/Code/Lab_4/OS13_HTCOM/OS13_HTCOM.vcxproj
@@ -137,6 +137,7 @@
   <ItemGroup>
     <ClInclude Include="framework.h" />
     <ClInclude Include="IHTStorage.h" />
+    <ClInclude Include="OS13.h" />
     <ClInclude Include="pch.h" />
   </ItemGroup>
   <ItemGroup>
