--- a/SP/Code/Lab_4/OS13_HTCOM/OS13_HTCOM.vcxproj.filters
+++ b/SP/Code/Lab_4/OS13_HTCOM/OS13_HTCOM.vcxproj.filters
@@ -24,6 +24,9 @@
     <ClInclude Include="IHTStorage.h">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
+    <ClInclude Include="OS13.h">
+      <Filter>Файлы заголовков</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="dllmain.cpp">
