SP:lab4 in progress. COM Interfaces and objects added. Implementation fixes in progress

--- a/SP/Code/Lab_4/OS13_HTCOM/OS13_HTCOM.vcxproj.filters
+++ b/SP/Code/Lab_4/OS13_HTCOM/OS13_HTCOM.vcxproj.filters
@@ -21,10 +21,10 @@
     <ClInclude Include="pch.h">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
-    <ClInclude Include="IHTStorage.h">
+    <ClInclude Include="HTStorage.h">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
-    <ClInclude Include="OS13.h">
+    <ClInclude Include="HTCOM.h">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
   </ItemGroup>
@@ -35,5 +35,13 @@
     <ClCompile Include="pch.cpp">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
+    <ClCompile Include="HTHandle.cpp">
+      <Filter>Исходные файлы</Filter>
+    </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="OS13_HTCOM.def">
+      <Filter>Исходные файлы</Filter>
+    </None>
   </ItemGroup>
 </Project>
