--- a/SP/Code/Lab_4/OS13_HTCOM/OS13_HTCOM.vcxproj
+++ b/SP/Code/Lab_4/OS13_HTCOM/OS13_HTCOM.vcxproj
@@ -143,19 +143,24 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="framework.h" />
-    <ClInclude Include="HTCOM.h" />
+    <ClInclude Include="Connector.h" />
+    <ClInclude Include="HTHandle.h" />
     <ClInclude Include="HTStorage.h" />
+    <ClInclude Include="OS13_HTCOM.h" />
     <ClInclude Include="pch.h" />
+    <ClInclude Include="StorageFactory.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="dllmain.cpp" />
     <ClCompile Include="HTHandle.cpp" />
+    <ClCompile Include="HTStorage.cpp" />
     <ClCompile Include="pch.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
     </ClCompile>
+    <ClCompile Include="StorageFactory.cpp" />
   </ItemGroup>
   <ItemGroup>
     <None Include="OS13_HTCOM.def" />
