--- a/SP/Code/Lab_4/OS13_HTCOM/OS13_HTCOM.vcxproj
+++ b/SP/Code/Lab_4/OS13_HTCOM/OS13_HTCOM.vcxproj
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup Label="ProjectConfigurations">
     <ProjectConfiguration Include="Debug|Win32">
@@ -142,28 +142,21 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClInclude Include="framework.h" />
     <ClInclude Include="Connector.h" />
-    <ClInclude Include="HTHandle.h" />
-    <ClInclude Include="HTStorage.h" />
+    <ClInclude Include="framework.h" />
     <ClInclude Include="OS13_HTCOM.h" />
     <ClInclude Include="pch.h" />
-    <ClInclude Include="StorageFactory.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="dllmain.cpp" />
-    <ClCompile Include="HTHandle.cpp" />
     <ClCompile Include="HTStorage.cpp" />
+    <ClCompile Include="OS13_HTCOM.cpp" />
     <ClCompile Include="pch.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
     </ClCompile>
-    <ClCompile Include="StorageFactory.cpp" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="OS13_HTCOM.def" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
