--- a/NAP/Code/Lab_8/ConcurrentServer/ConcurrentServer.vcxproj
+++ b/NAP/Code/Lab_8/ConcurrentServer/ConcurrentServer.vcxproj
@@ -127,6 +127,10 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="ConcurrentServer.cpp" />
+    <ClCompile Include="Helpers.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="Helpers.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
